# e2dit

./: .gitignore  Alloca.cpp  Alloca.h  BUG_LIST  CMakeLists.txt  Config.h  Config.h~  Config.thm  ConfigDefault.thm  Containers.h  Doxyfile  Geom.cpp  LIBS  MainSFML.cpp  Memory.cpp  Memory.h  README.md  Utils.h  a.out  application.d  base_object.d  button.d  camera.d  config.h  contributors.txt  controls.e2t  core  core.d  cursor.d  data_map.d  data_map_lexer.d  data_map_parser.d  data_render.d  edit.d  element.d  events.d  fs.h  gmon.out  image.d  label.d  (+20 more)
Data/: SaveOpenDialog.thm  TopPanelIcons.psd  TopPanelIcons2.psd  icons.png.dds  icons.psd  icons.xcf  icons_panel_tool.xcf  iconst.xcf  msg_icons.xcf  panel_tool.xcf  paneltool.png.dds  paneltool.psd  preview.dds  preview.psd  splashscreen.png.dds  tab.psd
Data/eng/: AddSprite.thm  AddUniformDialog.thm  AddVarDialog.thm  AnimationsDialog.thm  ColorDialog.thm  Finder.thm  LightsTool.thm  MainMenu.thm  MapEditor.thm  OKDialog.thm  PointsTool.thm  PolygonsTool.thm  RetopologyDialog.thm  SetPolygon.thm  SpritesTool.thm  TilesTool.thm  UserPreferences.thm  VarObjParams.thm
Engine/: .#Cursor.h  Cursor.h  DataMap.h  Dicts.h  EditableObject.h  EditableObject2.h  Engine.h  FormData.h  GameObjects.h  Groupes.h  HotKeys.h  Keyboard.h  Logger.h  MapEditor2D.h  ObjectVarsEvents.h
Engine/Dialogs/: AddSpriteForm.h  AddUniform.h  AddVar.h  Animations.h  ColorDialog.h  Finder.h  OKDialog.h  ObjectParams.h  RetopologyDialog.h  SetPolygon.h  SetStrip.h  SetUniform.h  UserPreferences.h  YesNoDialog.h
Engine/Dialogs/src/: AddSpriteForm.cpp  AddUniform.cpp  AddVar.cpp  Animations.cpp  ColorDialog.cpp  Finder.cpp  OKDialog.cpp  ObjectParams.cpp  RetopologyDialog.cpp  SetPolygon.cpp  SetStrip.cpp  SetUniform.cpp  UserPreferences.cpp  YesNoDialog.cpp
Engine/src/: Cursor.cpp  DataMap.cpp  DataMapParser.cpp  EditableObject.cpp  EditableObject2.cpp  Engine.cpp  Events.cpp  FormData.cpp  GameObjects.cpp  Groupes.cpp  HotKeys.cpp  Logger.cpp  MapEditor2D.cpp  ObjectVarsEvents.cpp  SaveLoadMap.cpp  Surface.cpp
Themes/Dark/: Controls.dds  Controls.thm~  Controls32.psd  star.psd
Themes/Hexagon/: Controls.thm  Controls32.psd  ControlsWhite.psd
Themes/Light/: Controls.psd  Controls.thm  Controls2.psd  Controls32.psd
Themes/Yellow/: Controls.png.dds  Controls.thm  Controls32-восстановлено-восстановлено.psd  Controls32-восстановлено.psd  Controls32.psd  test.cpp
UI/: UI.h  UICodeEditor.h  UIGrouped.h  UIMenus.h  UIStdCtrls.h  UITabs.h
UI/src/: UI.cpp  UICodeEditor.cpp  UIGrouped.cpp  UIMenus.cpp  UIPreComputed.cpp  UIStdCtrls.cpp  UITabs.cpp
cmake/: FindSFML.cmake
doc/: customdoxygen.css  footer.html  header.html
fonts/PT_Serif/: Readme.txt
gapi/: Animation.h  BaseObject.h  Camera.h  DebugDraw.h  Material.h  Shader.h  Sprite.h  Texture.h  gapi.h
gapi/src/: Animation.cpp  BaseObject.cpp  Camera.cpp  DebugDraw.cpp  Material.cpp  Shader.cpp  Sprite.cpp  Texture.cpp
gfx/: PLayer.psd  Player.xcf  Thumbs.db  Tiles.png.dds  Tiles.xcf  border.psd  saa.psd
gfx/PaxHeader/: Р‘РµР·С‹РјСЏРЅРЅР°СЏ РїР°РїРєР°
gfx/Player/: Player.psd
gfx/World 1/: Saw.png.dds
glsl/GL3/: TexAtlas.glsl  TexAtlasAlpha.glsl
glsl/GL4/: ColorLine.glsl
include/: resources.h
include/renderer/: base_object.h  camera.h  color.h  data_render.h  shader.h  sprite.h  texture.h
include/ui/: all.h  button.h  checkbox.h  colorpanel.h  cursor.h  dialog.h  dropmenu.h  edit.h  element.h  grouped.h  image.h  label.h  listmenu.h  loader.h  manager.h  menuitems.h  panel.h  stack_layout.h  tabs.h  theme.h  toolbar.h  tooltip.h  treelist.h  widget.h
include/ui/dialogs/: color_dialog.h
include/utility/: application.h  config.h  data_map.h  exceptions.h  filesystem.h  input.h  logger.h  math.h  renderer.h  string.h  strings_res.h  system.h  ui.h
make/: linux_debug.sh  linux_release_64.sh  linux_release_86.sh  win_debug.bat  win_release_64.bat  win_release_86.bat
make/linux/: all.sh  core.sh  gapi.sh  ui.sh  utility.sh
res/glsl/GL2/: color_line.glsl  color_picker.glsl  tex_atlas.glsl  tex_atlas_alpha.glsl  transform.glsl  сolor_line.glsl
res/glsl/GL3/: color_line.glsl  color_picker.glsl  colorize.glsl  tex_atlas.glsl  tex_atlas_mask.glsl  transform.glsl
res/glsl/GL4/: ColorPicker.glsl  TexAtlas.glsl  TexAtlasAlpha.glsl  Transform.glsl  colorize.glsl
res/strings/en/: main.e2t  menu.e2t
res/strings/eng/: menu.e2t
res/strings/ru/: menu.e2t
res/strings/rus/: strings.e2t
res/ui/dark/: controls.e2t  controls.thm
res/ui/layouts/: test.e2t
src/: config.h  main.cpp  resources.cpp
src/core/: core.cpp  core.h  events.cpp  mapeditor.cpp  mapeditor.h  scene.cpp  scene.h  session.h  settings.cpp  shortkey.h
src/core/commands/: command.h
src/core/manipulators/: manipulator.h
src/core/modificators/: extrude.cpp  partition.cpp
src/core/physic/: body.cpp  body.h  join.cpp  (+3 more)
src/editor/: core.cpp  core.h  events.cpp  mapeditor.cpp  mapeditor.h  pane.cpp  pane.h  scene.cpp  scene.h  settings.cpp  settings.h  shortkey.cpp  workspace.cpp  workspace.h
src/math/: glm.h  utils.h
src/renderer/: CMakeLists.txt  base_object.cpp  base_object.h  camera.cpp  camera.h  color.cpp  data_render.cpp  data_render.h  material.cpp  shader.cpp  shader.h  texture.cpp  texture.h
src/system/: application.cpp  application.h  logger.cpp
src/ui/: CMakeLists.txt  button.cpp  checkbox.cpp  colorpanel.cpp  cursor.cpp  cursor.mm  dialog.cpp  dropmenu.cpp  edit.cpp  element.cpp  grouped.cpp  image.cpp  label.cpp  listmenu.cpp  loader.cpp  manager.cpp  menuitems.cpp  panel.cpp  stack_layout.cpp  tabs.cpp  theme.cpp  toolbar.cpp  tooltip.cpp  treelist.cpp  widget.cpp
src/ui/dialogs/: color_dialog.cpp  color_dialog_view.cpp
src/ui/precompute/: button.cpp  checkbox.cpp  dialog.cpp  dropmenu.cpp  edit.cpp  element.cpp  grouped.cpp  label.cpp  listmenu.cpp  manager.cpp  menuitems.cpp  panel.cpp  toolbar.cpp  tooltip.cpp  treelist.cpp
src/utility/: CMakeLists.txt  application.cpp  data_map.cpp  data_map_lexer.cpp  data_map_parser.cpp  filesystem.cpp  logger.cpp  strings_res.cpp
(+54 files in other folders)
